--- a/signup.html
+++ b/signup.html
@@ -19,24 +19,26 @@
       display: flex;
       justify-content: center;
       align-items: center;
-     background: linear-gradient(270deg, #000000, #2d2d4a, #1a1a40);
+     /* background: linear-gradient(270deg, #000000, #2d2d4a, #1a1a40);
       background-size: 600% 600%;
-      animation: gradientBG 10s ease infinite; 
+      animation: gradientBG 10s ease infinite;  */
+      background-color: #151515;
       color: white;
     }
 
-    @keyframes gradientBG {
+    /* @keyframes gradientBG {
       0% {background-position: 0% 50%;}
       50% {background-position: 100% 50%;}
       100% {background-position: 0% 50%;}
-    }
+    } */
 
     .container {
-      background: rgba(0,0,0,0.8);
+      background: #151515;
+      border: 2px solid #9292d6;
       border-radius: 15px;
       padding: 60px;
       width: 350px;
-      box-shadow: 0px 0px 20px #9292d6;
+      /* box-shadow: 0px 0px 20px #9292d6; */
       text-align: center;
       height: 500px;
       width: 500px;
@@ -44,8 +46,9 @@
 
     #sign-heading {
       color: #9292d6;
-      font-size: 1.8rem;
+      font-size: 2.5rem;
       margin-bottom: 30px;
+      font-weight: 800;
     }
 
     .input-box {
@@ -123,7 +126,7 @@
 </head>
 <body>
   <div class="container">
-    <p id="sign-heading">Sign up to start listening <i class="fa-solid fa-music"></i></p>
+    <p id="sign-heading">Sign up to start listening </p>
 
     <form id="sign">
       <div class="input-box">
