Updated project with latest changes

--- a/albums.html
+++ b/albums.html
@@ -199,7 +199,7 @@ a {
     <!-- logo -->
             <div class="nav-logo border">
                 <div class="logo">
-                    logo
+                    <img src="./images/image.png" height="70px" width="70px"/>
                 </div>
             </div>
 
