--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- logo -->
             <div class="nav-logo border">
                 <div class="logo">
-                    logo
+                    <img src="./images/image.png" height="70px" width="70px"/>
                 </div>
             </div>
 
@@ -73,7 +73,7 @@
     <P>COLLECTION</P>
     <div class="playlist bar">
         <i class="fa-solid fa-music"></i>  Playlist</div>
-    <div class="album bar"><i class="fa-regular fa-circle-play"></i>  <a href="playlist.html">Playlist</a></div>
+    <div class="album bar"><i class="fa-regular fa-circle-play"></i>  <a href="track.html">Track</a></div>
     <div class="artist bar"><i class="fa-solid fa-microphone"></i> <a href="artist.html">Artist</a></div>
     <div class="albums bar"> <i class="fa-solid fa-circle-dot"></i> <a href="albums.html">Albums</a></div>
 
