--- a/signup.html
+++ b/signup.html
@@ -144,7 +144,7 @@
 
       <button type="submit" id="submit">Sign Up</button>
       
-      <p id="signup-link">Already have an account? <a href="login.html">Sign up</a></p>
+      <p id="signup-link">Already have an account? <a href="login.html">login</a></p>
     </form>
   </div>
 
