--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <label class="chip" for="f-playlists2"><a href="./playlist.html">Playlist</a></label>
             
             <input type="radio" name="scope" id="f-liked" />
-            <label class="chip" for="f-playlists3"><a href="liked.html">liked</a></label>
+            <label class="chip" for="f-playlists3"><a href="liked.html">Liked</a></label>
           </div>
         </div>
       </div>
