--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About Us - Pastel Neumorphism Music Player</title>
+  <title>Catify</title>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     :root{
@@ -248,13 +248,12 @@
   <header class="nav">
     <div class="container nav-inner">
       <div class="brand">
-        <img src="images/cat.png" height="70px" width="70px">
+        <img src="images/cat.png" height="100px" width="120px">
       </div>
 
       <div class="search-wrap">
-        <form class="search" role="search" aria-label="Global">
-          <label for="q" class="sr-only">Search</label>
-          <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M21 21l-4.2-4.2m1.2-4.8a7 7 0 1 1-14 0a7 7 0 0 1 14 0Z"/></svg>
+        <form class="search" method="post">
+<i class="fa-solid fa-circle fa-xs" style="color: #000000;"></i>
           <input id="q" name="q" placeholder="Search music..." />
         </form>
         <div class="filters">
