--- a/albums.html
+++ b/albums.html
@@ -88,13 +88,7 @@
       border-bottom: 1px solid color-mix(in srgb, var(--bg) 70%, #aab7d8);
     }
     .nav-inner{ display:flex; align-items:center; justify-content:space-between; gap:16px; padding:14px 0; }
-    .brand{ display:flex; align-items:center; gap:10px; font-weight:700; letter-spacing:.2px; }
-    .logo-dot{
-      width:36px; height:36px; border-radius:50%;
-      background: radial-gradient(120% 120% at 25% 25%, var(--accent) 0%, #ffc1d4 60%, #ffe7ef 100%);
-      box-shadow: 6px 6px 12px var(--shadow-dark), -6px -6px 12px var(--shadow-light);
-    }
-
+   
     .nav-links{
         font-size: 2rem;
     }
@@ -266,9 +260,8 @@
       </div>
 
       <div class="search-wrap">
-        <form class="search" role="search" aria-label="Global">
-          <label for="q" class="sr-only">Search</label>
-          <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M21 21l-4.2-4.2m1.2-4.8a7 7 0 1 1-14 0a7 7 0 0 1 14 0Z"/></svg>
+        <form class="search" method="post">
+        <i class="fa-solid fa-circle fa-xs" style="color: #000000;"></i>
           <input id="q" name="q" placeholder="Search albums, artists..." />
         </form>
         <div class="filters">
